# ai-real-estate-matchmaker

./: .env.example  .env.local.example  .gitignore  NestMatch_AI_Investor_Pitch.pptx  README.md  make_pitch_deck.py  next.config.js  package-lock.json  package.json  tailwind.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_multitenant_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  middleware.py  plans.py  rate_limit.py  security.py
backend/app/db/: base.py  mixins.py  mongo.py  redis.py  session.py
backend/app/models/: __init__.py  activity.py  api_key.py  audit.py  engagement.py  lead.py  match.py  organization.py  project.py  property.py  usage.py  user.py  webhook.py
backend/app/repositories/: __init__.py  api_keys.py  audit.py  engagement.py  leads.py  matches.py  organizations.py  projects.py  properties.py  usage.py  users.py
backend/app/schemas/: ai.py  api_key.py  auth.py  common.py  engagement.py  explain.py  intelligence.py  lead.py  match.py  organization.py  project.py  property.py  recommendation.py  user.py  webhook.py
backend/app/services/: __init__.py  ai.py  deal_score.py  firebase.py  leads.py  llm.py  matching.py  nlq.py  projects.py  recommendations.py  semantic.py  signals.py  storage.py  supabase.py  usage.py  (+1 more)
backend/scripts/: load_members.py  migrate_sqlite_to_supabase.py  seed.py  verify_ai.py
backend/tests/: conftest.py  test_api.py
(+122 files in other folders)
