[project]
name = "ai-real-estate-matchmaker-backend"
version = "1.0.0"
description = "Multi-tenant FastAPI backend for the Next-Gen AI Real Estate Matchmaker SaaS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "gunicorn>=23.0.0",
  "pydantic-settings>=2.5.2",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.2",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.1,<5",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "motor>=3.6.0",
  "redis>=5.1.1",
  "httpx>=0.27.2",
  "firebase-admin>=6.5.0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "structlog>=24.4.0",
  "boto3>=1.35.0",
  "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["B008"]  # FastAPI uses callables in argument defaults (Depends/Query)

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
